--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                     </div>
 
-                    <div class="countyInfo">
+                    <div class="countyInfo" id="countryInfoColor">
                         <div class="city"></div>
                         <div class="country"></div>
                         <div class="minMaxTemp">
